# PD-final-project

./: CMakeLists.txt
docs/: Entity_code.txt  levelStruct.txt  magic-number-description.txt
levels/: example.json
src/UI/: scene.cpp  scene.h  simpleRender.cpp  simpleRender.h
src/core/: Rules.cpp  Rules.h  main.cpp
src/entities/: BasicObject.cpp  BasicObject.h  KeyWordObject.cpp  KeyWordObject.h  Level.cpp  Level.h  OperatorObject.cpp  OperatorObject.h  Player.cpp  Player.h  PointerObject.cpp  PointerObject.h  PropertyObject.cpp  PropertyObject.h  SpecialObject.cpp  SpecialObject.h  VariableObject.cpp  VariableObject.h
src/utils/: readLevel.cpp  readLevel.h
